# oic-toolkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: conf.py  developer_guide.rst  index.rst  sg_execution_times.rst
examples/: GALLERY_HEADER.rst  plot_stitching_chelsea.py
src/oic_toolkit/: __init__.py  _internal.py  display.py  io.py  register.py  segment.py  util.py
tests/: test_io.py  test_match_size.py  test_registration_rotation.py  test_registration_rotation_translation.py  test_stitch.py
