[project]
name = "oic-toolkit"
version = "0.1.0"
description = "Core image analysis and processing utilities for the VAI Optical Imaging Core"
readme = "README.md"
authors = [
    { name = "Jian Wei Tay", email = "jian.tay@vai.org" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-image>=0.26.0",
    "scipy>=1.18.0",
    "tifffile>=2026.6.1",
    "xarray>=2026.4.0",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pydata-sphinx-theme>=0.19.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "sphinx>=9.1.0",
    "sphinx-autoapi>=3.8.0",
    "sphinx-gallery>=0.21.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"] 
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
# Replaces Black defaults
quote-style = "double"
indent-style = "space"

